<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medium_lvl"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alignmentMode="alignMargins"
        android:columnCount="3"
        android:rowCount="1"
        android:columnOrderPreserved="false">

        <Button
            android:id="@+id/medium_lvl_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/lvl_1"
            android:layout_margin="8dp"/>

        <Button
            android:id="@+id/medium_lvl_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/lvl_2"
            android:layout_margin="8dp"/>

        <Button
            android:id="@+id/medium_lvl_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/lvl_3"
            android:layout_margin="8dp"/>
    </GridLayout>
</LinearLayout>
